fix: convert to rem units, recipe container desktop and items spacing from list instructions

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
 /* Recipe Header */
 .recipe__image {
   display: block;
-  max-inline-size: 100%;
+  max-width: 100%;
 }
 .recipe__content {
   display: flex;
@@ -156,8 +156,8 @@ body {
 }
 .list--instructions li {
   counter-increment: orderedList;
-  margin-block-end: 10px;
-  padding-inline-start: 30px;
+  margin-block-end: clamp(0.7rem, 1vw + 0.5rem, 0.8rem);
+  padding-inline-start: 1.8rem;
   position: relative;
 }
 .list--instructions li::before {
@@ -224,7 +224,7 @@ body {
 @media (min-width: 48rem) {
   .recipe {
     width: 70%;
-    max-width: 750px;
+    max-width: 46.8rem;
     margin: 0 auto;
     align-items: flex-start;
     padding: var(--spacing-500);
